# azulindo

./: .clang-format  .gitattributes  .gitmodules  README.md  compile_commands.json
interface/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
interface/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
interface/source/: CMakeLists.txt  main.cpp
interface/source/config/: wave_config.h
interface/source/configs/: layout_config.h  wave_config.h
interface/source/core/: emotion.h  emotion_profile.cpp  emotion_profile.h
interface/source/screen/: azulindo_screen.cpp  azulindo_screen.h  hologram.cpp  hologram.h
interface/test/: CMakeLists.txt
interface/test/source/: interface_test.cpp
